<resources>
    <string name="app_name">Login Page</string>
    <string name="sell">Sell</string>
    <string name="data">data</string>
    <string name="profile">profile</string>
    <string name="main">Main</string>
    <string name="Data">Data</string>
    <string name="Profile">Profile</string>
    <string name="vehicle">Vehicle :</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="register">Register</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="Register">Register</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="Login">Login</string>
    <string name="queries_should_be_formatted_as_price_or_price_where_price_is_in_integer_value_eg_10000"><![CDATA[Queries should be formatted as \'< Price\' or \'> Price\' where price is in integer value eg \'< 10000\'.]]></string>
    <string name="latitude_longitude">Latitude _ Longitude_</string>
    <string name="update_location">Update Location</string>
    <string name="numbers_of_cars_at_different_prices">Numbers of cars at different prices</string>
    <string name="number_of_cars_at_different_prices">Number of cars at different prices</string>
    <string name="query">query</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView2</string>
    <string name="find_your_location">Find your Location</string>
    <string name="id">ID</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="price">Price</string>
    <string name="year">Year</string>
    <string name="add_car">Add Car</string>
    <string name="update_car">Update Car</string>
    <string name="delete_car">Delete Car</string>
</resources>