<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainPage">


    <android.widget.SearchView
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="18dp"
        android:iconifiedByDefault="false"
        android:padding="8dp"
        android:queryHint="Search..."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
    <requestFocus />

    <TextView
        android:id="@+id/recommendationsTextView"
        android:layout_width="317dp"
        android:layout_height="249dp"
        android:layout_below="@+id/search"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:text=""
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search"
        tools:ignore="MissingConstraints" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search"
        android:layout_margin="10dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search"
        tools:ignore="MissingConstraints" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#655A7C"
            android:padding="8dp"
            android:text="@string/query"
            android:textColor="#E7E4E2"
            android:textSize="10sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btnSell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#655A7C"
            android:padding="8dp"
            android:text="@string/sell"
            android:textColor="#E7E4E2"
            android:textSize="10sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btnData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#655A7C"
            android:padding="8dp"
            android:text="@string/Data"
            android:textColor="#E7E4E2"
            android:textSize="10sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#655A7C"
            android:padding="8dp"
            android:text="@string/Profile"
            android:textColor="#E7E4E2"
            android:textSize="10sp"
            android:textStyle="italic" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>